Fix: (modules) Remove summary marker on ios

--- a/src/components/lists/listAccordion/listAccordion.module.scss
+++ b/src/components/lists/listAccordion/listAccordion.module.scss
@@ -77,6 +77,10 @@
       font-size: 40px;
     }
   }
+
+  &::-webkit-details-marker {
+    display: none;
+  }
 }
 
 .content {
